--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Delete.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Obriši proizvod";
-    Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Obriši proizvod</h2>
