--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Izmjena proizvoda";
-    Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Izmjeni proizvod</h2>
