--- a/UPPHercegovina.WebApplication/Views/Memberships/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Memberships/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            <label>Broj članske</label>
+        </th>
+        <th>
             @Html.ActionLink("Naziv", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
@@ -31,6 +34,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
