--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Dodaj novi proizvod";
-    Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Prijavi za skladište</h2>
