--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Detalji";
-    Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Detalji</h2>
